--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".mvvm.View.LookupActivity">
+    tools:context=".mvvm.View.SearchResultActivity">
 
 </android.support.constraint.ConstraintLayout>
