--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="itemPostViewModel"
+            type="com.example.asus.example.mvvm.ViewModel.ItemPostViewModel"/>
+
+    </data>
+<android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="@dimen/itemRVHeight"
     android:background="@color/graylight">
 
 
@@ -49,7 +56,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="date method noch machen in viewmodel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -63,11 +70,11 @@
         android:layout_height="27dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="@{itemPostViewModel.getNumberofLikes}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/postTV"
         app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="184dp" />
+        tools:layout_editor_absoluteX="197dp" />
 
     <TextView
         android:id="@+id/nameOfUserWhoPostedTV"
@@ -80,7 +87,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/wherePostedTV"
         app:layout_constraintTop_toBottomOf="@+id/postTV"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/postTV"
@@ -92,7 +99,6 @@
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.608"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -109,3 +115,4 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
+</layout>
