--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
+    android:id="@+id/toolbar"
+    android:background="@drawable/gradient_background"
+    app:popupTheme="@style/AppTheme.PopupOverlay" >
 
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/openNavMenuIcon"
+        android:src="@drawable/ic_menu_icon"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/toolbarTV"
+        android:gravity="center"
+        android:text="sdadsad"/>
 </android.support.v7.widget.Toolbar>
