--- a/app/src/main/res/menu/group_page_menu.xml
+++ b/app/src/main/res/menu/group_page_menu.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/editGroup"
+        android:title="@string/editGroup"
+        app:showAsAction="never">
+    </item>
+
+    <item
+        android:id="@+id/deleteGroup"
+        android:title="@string/deleteGroup"
+        app:showAsAction="never">
+    </item>
+
 
 </menu>
