--- a/app/src/main/res/layout/activity_group_feed.xml
+++ b/app/src/main/res/layout/activity_group_feed.xml
@@ -14,6 +14,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/gradient_background"
         app:popupTheme="@style/AppTheme.PopupOverlay">
+
     </android.support.v7.widget.Toolbar>
 
 
@@ -23,13 +24,78 @@
         android:background="@color/graylight">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/memberTV"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="27dp"
             android:layout_marginBottom="8dp"
-            android:text="TextView"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:layout_editor_absoluteX="16dp" />
+            android:text="member"
+            app:layout_constraintEnd_toStartOf="@+id/joinBt"
+            app:layout_constraintHorizontal_bias="0.685"
+            app:layout_constraintStart_toEndOf="@+id/creationDateTV"
+            app:layout_constraintTop_toBottomOf="@+id/groupDescriptionTV"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <Button
+            android:id="@+id/joinBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="8dp"
+            android:text="Button"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/createPostIV"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <ImageView
+            android:id="@+id/createPostIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.733"
+            app:layout_constraintStart_toEndOf="@+id/groupPictureIV"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_create_24px" />
+
+        <TextView
+            android:id="@+id/creationDateTV"
+            android:layout_width="wrap_content"
+            android:layout_height="27dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
+            android:gravity="center"
+            android:text="Date"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/creatorOfGroupTV" />
+
+        <TextView
+            android:id="@+id/creatorOfGroupTV"
+            android:layout_width="wrap_content"
+            android:layout_height="27dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="creator"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
 
         <ImageView
             android:id="@+id/groupPictureIV"
@@ -57,6 +123,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
+            android:gravity="center"
             app:layout_constraintTop_toBottomOf="@+id/groupPictureIV" />
     </android.support.constraint.ConstraintLayout>
 
