--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/itemRVHeight">
 
     <TextView
-        android:id="@+id/groupNameTV"
+        android:id="@+id/eventNameTV"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/pictureRVSize"
         android:layout_marginBottom="8dp"
@@ -21,11 +19,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/groupNameIV"
+        app:layout_constraintStart_toEndOf="@+id/eventPictureIV"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/groupNameIV"
+        android:id="@+id/eventPictureIV"
         android:layout_width="@dimen/pictureRVSize"
         android:layout_height="@dimen/pictureRVSize"
         android:layout_marginBottom="8dp"
