--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
 
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <fragment
+        android:id="@+id/fragmentEventsCategories"
+        android:name="com.example.asus.example.mvvm.View.CategoriesEventFragment"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/twoFragmentHeight" />
+
+
+    <fragment
+        android:id="@+id/fragmentMyEvents"
+        android:name="com.example.asus.example.mvvm.View.MyEventsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/twoFragmentHeight" />
 </LinearLayout>
