--- a/app/src/main/res/layout/activity_personal_feed.xml
+++ b/app/src/main/res/layout/activity_personal_feed.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_weight="1" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/personalFeedRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/personalFeedRV"
+        android:layout_weight="2"
         tools:listitem="@layout/item_post">
-
 
 
     </android.support.v7.widget.RecyclerView>
