--- a/app/src/main/res/layout/activity_subcategory_event_page.xml
+++ b/app/src/main/res/layout/activity_subcategory_event_page.xml
@@ -8,6 +8,11 @@
         android:orientation="vertical">
 
 
+        <include
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/eventsInSubcategoryRV"
             android:layout_width="match_parent"
