--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -30,6 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pictureOfUserWhoPostedIV"
         app:layout_constraintVertical_bias="0.909"
+        android:onClick="@{itemPostViewModel::unlike}"
         app:srcCompat="@drawable/ic_thumb_down_icon" />
 
     <ImageView
@@ -46,6 +47,7 @@
         app:layout_constraintEnd_toStartOf="@+id/nameOfUserWhoPostedTV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pictureOfUserWhoPostedIV"
+        android:onClick="@{itemPostViewModel::like}"
         app:srcCompat="@drawable/ic_thumb_ub_icon" />
 
     <TextView
@@ -56,7 +58,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="date method noch machen in viewmodel"
+        android:text="@{itemPostViewModel.date}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -70,7 +72,7 @@
         android:layout_height="27dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:text="@{itemPostViewModel.getNumberofLikes}"
+        android:text="@{itemPostViewModel.numberOfLikes}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/postTV"
         app:layout_constraintVertical_bias="0.0"
@@ -83,7 +85,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="8dp"
-        android:text="likes"
+        android:text="@{itemPostViewModel.numberOfLikes}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/wherePostedTV"
         app:layout_constraintTop_toBottomOf="@+id/postTV"
@@ -96,7 +98,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:text="@{itemPostViewModel.post}"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.608"
         app:layout_constraintTop_toTopOf="parent" />
@@ -112,6 +114,7 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toStartOf="@+id/postTV"
         app:layout_constraintStart_toStartOf="parent"
+        app:imageUrl="@{itemPostViewModel.imageUrl}"
         app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
