--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="itemPostViewModel"
@@ -30,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pictureOfUserWhoPostedIV"
         app:layout_constraintVertical_bias="0.909"
-        android:onClick="@{itemPostViewModel::unlike}"
+        android:onClick="@{itemPostViewMode::unlike}"
         app:srcCompat="@drawable/ic_thumb_down_icon" />
 
     <ImageView
@@ -38,16 +37,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="68dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="68dp"
         android:layout_marginTop="44dp"
+        android:onClick="@{itemPostViewModel::like}"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/nameOfUserWhoPostedTV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pictureOfUserWhoPostedIV"
-        android:onClick="@{itemPostViewModel::like}"
         app:srcCompat="@drawable/ic_thumb_ub_icon" />
 
     <TextView
@@ -71,23 +67,25 @@
         android:layout_width="90dp"
         android:layout_height="27dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:text="@{itemPostViewModel.numberOfLikes}"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nameOfUserWhoPostedTV"
         app:layout_constraintTop_toBottomOf="@+id/postTV"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="197dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/nameOfUserWhoPostedTV"
         android:layout_width="70dp"
         android:layout_height="27dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="28dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:text="@{itemPostViewModel.numberOfLikes}"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/wherePostedTV"
+        app:layout_constraintStart_toEndOf="@+id/thumbsUp"
         app:layout_constraintTop_toBottomOf="@+id/postTV"
         app:layout_constraintVertical_bias="0.0" />
 
