--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -18,6 +18,7 @@
         android:layout_margin="10dp"
         android:background="@color/graylight"
         android:gravity="center"
+        android:id="@+id/item_comment"
         android:orientation="vertical">
 
 
