--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -2,6 +2,12 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="categoryViewModel"
+            type="com.example.asus.example.mvvm.ViewModel.ItemEventViewModel" />
+    </data>
 
     <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
