--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -59,7 +59,7 @@
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/createPost"
+                app:layout_constraintTop_toBottomOf="@+id/createPostInEventIV"
                 app:layout_constraintVertical_bias="0.733" />
 
             <ImageView
@@ -73,7 +73,7 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.733"
-                app:layout_constraintStart_toEndOf="@+id/groupPictureIV"
+                app:layout_constraintStart_toEndOf="@+id/eventPictureIV"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_baseline_create_24px" />
 
@@ -86,7 +86,7 @@
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
-                android:text="Date"
+                android:text="@{itemEventViewModel.date}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/creatorOfEventTV"
                 app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTV"
@@ -101,7 +101,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
-                android:text="creator"
+                android:text="@{itemEventViewModel.creator}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTV"
@@ -129,7 +129,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:gravity="center"
-                android:text="Description"
+                android:text="@{itemEventViewModel.description}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/eventPictureIV" />
