--- a/app/src/main/res/layout/fragment_group_description.xml
+++ b/app/src/main/res/layout/fragment_group_description.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/gradient_background"
-        app:popupTheme="@style/AppTheme.PopupOverlay">
-
-
-    </android.support.v7.widget.Toolbar>
-
+        <variable
+            name="itemGroupViewModel"
+            type="com.example.asus.example.mvvm.ViewModel.ItemGroupViewModel" />
+    </data>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -34,7 +24,7 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:text="member"
+            android:text="sd"
             app:layout_constraintEnd_toStartOf="@+id/joinBt"
             app:layout_constraintHorizontal_bias="0.685"
             app:layout_constraintStart_toEndOf="@+id/creationDateTV"
@@ -128,9 +118,5 @@
             app:layout_constraintTop_toBottomOf="@+id/groupPictureIV" />
     </android.support.constraint.ConstraintLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_post"/>
-</LinearLayout>
+
 </layout>
