--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -39,7 +39,7 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:gravity="center"
-                android:text="@{itemEventViewModel.participants}"
+                android:text="@{itemEventViewModel.numberOfParticipants}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/participateBt"
                 app:layout_constraintHorizontal_bias="0.505"
@@ -86,7 +86,7 @@
                 android:layout_marginStart="36dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
-                android:text="@{itemEventViewModel.date}"
+                android:text="@{itemEventViewModel.dateAsString}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/creatorOfEventTV"
                 app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTV"
@@ -101,7 +101,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:gravity="center"
-                android:text="@{itemEventViewModel.creator}"
+                android:text="@{itemEventViewModel.creator.name}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTV"
