--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -5,7 +5,7 @@
     <data>
 
         <variable
-            name="categoryViewModel"
+            name="itemEventViewModel"
             type="com.example.asus.example.mvvm.ViewModel.ItemEventViewModel" />
     </data>
 
