--- a/app/src/main/res/layout/activity_navigation__drawer.xml
+++ b/app/src/main/res/layout/activity_navigation__drawer.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <android.support.v4.widget.DrawerLayout
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,3 +25,4 @@
         app:menu="@menu/activity_navigation__drawer_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
+</layout>
