--- a/app/src/main/res/layout/fragment_personal_feed.xml
+++ b/app/src/main/res/layout/fragment_personal_feed.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools">
 
 
-<LinearLayout
+    <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -15,9 +16,7 @@
         android:layout_height="match_parent"
         android:layout_weight="2"
         tools:listitem="@layout/item_post">
-
-
     </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 </layout>
