--- a/app/src/main/res/layout/activity_navigation__drawer.xml
+++ b/app/src/main/res/layout/activity_navigation__drawer.xml
@@ -11,11 +11,12 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/fragment_personal_feed"
+        layout="@layout/container_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.NavigationView
+
+        <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
