View implemented + Manifest Fixed

--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -136,6 +136,7 @@
         </android.support.constraint.ConstraintLayout>
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/eventFeedRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_post" />
