Added RecyclerView to fragment_user_profile and renamed the file

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="twoFragmentHeight">255dp</dimen>
     <dimen name="logoLoginScreenSize">200dp</dimen>
     <dimen name="searchInputEditText">50dp</dimen>
+    <dimen name="userProfilePostRV">450dp</dimen>
 </resources>
