--- a/app/src/main/res/layout/fragment_groups_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_groups_in_subcategory.xml
@@ -4,10 +4,12 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/groupsInSubcategoryRV"
+        android:id="@+id/groupsInSubcategoryGroupRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_group"></android.support.v7.widget.RecyclerView>
+        tools:listitem="@layout/item_group">
+
+    </android.support.v7.widget.RecyclerView>
 
 
 </layout>
