--- a/app/src/main/res/layout/fragment_my_events.xml
+++ b/app/src/main/res/layout/fragment_my_events.xml
@@ -11,7 +11,7 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/myEventsRV"
+        android:id="@+id/myEventsEventRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_event">
