--- a/app/src/main/res/layout/fragment_my_groups.xml
+++ b/app/src/main/res/layout/fragment_my_groups.xml
@@ -13,7 +13,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/myGroupsRV"
+        android:id="@+id/myGroupsGroupRV"
         tools:listitem="@layout/item_group">
 
     </android.support.v7.widget.RecyclerView>
