--- a/app/src/main/res/layout/fragment_event_search_result.xml
+++ b/app/src/main/res/layout/fragment_event_search_result.xml
@@ -9,7 +9,7 @@
 
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/eventSearchResultRV"
+            android:id="@+id/eventSearchResultEventRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_event">
