--- a/app/src/main/res/layout/fragment_groups_in_category.xml
+++ b/app/src/main/res/layout/fragment_groups_in_category.xml
@@ -9,7 +9,7 @@
 
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/groupsInCategoryRV"
+            android:id="@+id/groupsInCategoryGroupRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_group">
