--- a/app/src/main/res/layout/fragment_personal_feed.xml
+++ b/app/src/main/res/layout/fragment_personal_feed.xml
@@ -11,7 +11,7 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/personalFeedRV"
+        android:id="@+id/personalFeedPostRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2"
