--- a/app/src/main/res/layout/fragment_subscriptions.xml
+++ b/app/src/main/res/layout/fragment_subscriptions.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/subscriptionsRV"
+            android:id="@+id/subscriptionsUserRV"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/item_user">
