--- a/app/src/main/res/layout/fragment_subcategories_event.xml
+++ b/app/src/main/res/layout/fragment_subcategories_event.xml
@@ -13,10 +13,11 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/subcategoriesEventSubcategoryRV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/twoFragmentHeight"
         tools:listitem="@layout/item_subcategory">
 
     </android.support.v7.widget.RecyclerView>
 
-</LinearLayout>
+
+    </LinearLayout>
 </layout>
