--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="logoLoginScreenSize">200dp</dimen>
     <dimen name="searchInputEditText">50dp</dimen>
     <dimen name="userProfilePostRV">450dp</dimen>
+    <dimen name="groupAndEventFeedRVHeight">350dp</dimen>
+    <dimen name="searchResultHeight">150dp</dimen>
+    <dimen name="oneFragmentHeight">500dp</dimen>
 </resources>
