--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -130,7 +130,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/eventFeedRV"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="@dimen/groupAndEventFeedRVHeight"
             tools:listitem="@layout/item_post" />
     </LinearLayout>
 </layout>
