--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -9,7 +9,7 @@
     </data>
     <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+        android:layout_height="@dimen/oneFragmentHeight">
 
     <EditText
         android:id="@+id/newPostTextET"
