--- a/app/src/main/res/layout/fragment_personal_feed.xml
+++ b/app/src/main/res/layout/fragment_personal_feed.xml
@@ -16,7 +16,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/personalFeedPostRV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/oneFragmentHeight"
         android:layout_weight="2"
         tools:listitem="@layout/item_post">
     </android.support.v7.widget.RecyclerView>
