--- a/app/src/main/res/layout/fragment_subcategories_group.xml
+++ b/app/src/main/res/layout/fragment_subcategories_group.xml
@@ -13,7 +13,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/subcategoriesGroupSubcategoriesRV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/twoFragmentHeight"
         tools:listitem="@layout/item_subcategory">
 
     </android.support.v7.widget.RecyclerView>
