fixed mistakes in some layout files

--- a/app/src/main/res/layout/fragment_new_event_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_new_event_in_subcategory.xml
@@ -15,6 +15,22 @@
         android:layout_height="@dimen/oneFragmentHeight">
 
 
+        <Button
+            android:id="@+id/newEventInSubcategoryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/create"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryImageUrlET" />
+
         <EditText
             android:id="@+id/newEventInSubcategoryNameET"
             android:layout_width="wrap_content"
@@ -55,10 +71,10 @@
             android:layout_marginLeft="36dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="36dp"
-            android:layout_marginTop="168dp"
+            android:layout_marginTop="100dp"
             android:hint="@string/eventImageUrl"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.101"
+            app:layout_constraintHorizontal_bias="0.047"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryDescriptionET" />
     </android.support.constraint.ConstraintLayout>
