--- a/app/src/main/res/layout/fragment_user_search_input.xml
+++ b/app/src/main/res/layout/fragment_user_search_input.xml
@@ -1,19 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/searchInputEditText">
+        android:layout_height="@dimen/searchInputHeight">
 
         <Button
-            android:id="@+id/uhar"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:id="@+id/userSearchInputButton"
+            android:layout_width="@dimen/searchInputButtonWidth"
+            android:layout_height="@dimen/searchInputButtonHeight"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/search"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/userSearchInputET"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/searchInputEditText"
+            android:id="@+id/userSearchInputET"
+            android:layout_width="280dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="@string/userSearch" />
+            android:text="@string/userSearch"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.454" />
     </android.support.constraint.ConstraintLayout>
 </layout>
