--- a/app/src/main/res/layout/fragment_new_group_in_category.xml
+++ b/app/src/main/res/layout/fragment_new_group_in_category.xml
@@ -15,6 +15,22 @@
         android:layout_height="@dimen/oneFragmentHeight">
 
 
+        <Button
+            android:id="@+id/newGroupInCategoryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/create"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryImageUrlET" />
+
         <EditText
             android:id="@+id/newGroupInCategoryNameET"
             android:layout_width="wrap_content"
@@ -47,18 +63,15 @@
             android:id="@+id/newGroupInCategoryImageUrlET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="116dp"
             android:hint="@string/groupImageUrl"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.105"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryDescriptionET"
-            app:layout_constraintVertical_bias="0.188" />
+            app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryDescriptionET" />
     </android.support.constraint.ConstraintLayout>
 </layout>
