--- a/app/src/main/res/layout/fragment_event_search_result.xml
+++ b/app/src/main/res/layout/fragment_event_search_result.xml
@@ -2,12 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/eventSearchResultEventRV"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/searchResultHeight"
-            tools:listitem="@layout/item_event">
-
-        </android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/eventSearchResultEventRV"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/searchResultHeight"
+        tools:listitem="@layout/item_event"></android.support.v7.widget.RecyclerView>
 
 </layout>
