--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -5,7 +5,7 @@
     <data>
 
         <variable
-            name="ItemEventViewModel"
+            name="itemEventViewModel"
             type="com.example.asus.example.mvvm.ViewModel.ItemEventViewModel" />
     </data>
 
@@ -25,7 +25,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
-        android:text="TextView"
+        android:text="@{itemEventViewModel.name}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
