--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -68,7 +68,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
-        android:text="todo"
+        android:text="@{itemPostViewModel.ownerName}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fragmentNameOfUserWhoPostedTV"
         app:layout_constraintTop_toBottomOf="@+id/fragmentPostTV"
