--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="oneFragmentHeight">500dp</dimen>
     <dimen name="searchInputButtonHeight">45dp</dimen>
     <dimen name="searchInputButtonWidth">60dp</dimen>
+    <dimen name="createInCatOrSubcategoryRVHeight">230dp</dimen>
 </resources>
