Added Create ImageView to layout files

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="searchInputButtonHeight">45dp</dimen>
     <dimen name="searchInputButtonWidth">60dp</dimen>
     <dimen name="createInCatOrSubcategoryRVHeight">230dp</dimen>
+    <dimen name="personalFeedRVHeight">470dp</dimen>
 </resources>
