--- a/app/src/main/res/layout/fragment_categories_group.xml
+++ b/app/src/main/res/layout/fragment_categories_group.xml
@@ -1,21 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/twoFragmentHeight"
-        android:orientation="vertical">
+        android:layout_height="@dimen/twoFragmentHeight">
 
+
+        <ImageView
+            android:id="@+id/categoriesGroupCreateGroupIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/categoriesGroupCategoryRV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.976"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/ic_baseline_create_24px" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/categoriesGroupCategoryRV"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/twoFragmentHeight"
+            android:layout_width="368dp"
+            android:layout_height="@dimen/createInCatOrSubcategoryRVHeight"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             tools:listitem="@layout/item_category">
 
         </android.support.v7.widget.RecyclerView>
 
 
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 </layout>
