--- a/app/src/main/res/layout/fragment_personal_feed.xml
+++ b/app/src/main/res/layout/fragment_personal_feed.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
 
 
     <android.support.constraint.ConstraintLayout
@@ -10,13 +12,37 @@
     android:orientation="vertical">
 
 
+        <ImageView
+            android:id="@+id/personalFeedCreatePostIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/personalFeedPostRV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/ic_baseline_create_24px" />
+
         <android.support.v7.widget.RecyclerView
-        android:id="@+id/personalFeedPostRV"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/oneFragmentHeight"
-        android:layout_weight="2"
-        tools:listitem="@layout/item_post">
-    </android.support.v7.widget.RecyclerView>
+            android:id="@+id/personalFeedPostRV"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/personalFeedRVHeight"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_weight="2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/item_post"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
