--- a/app/src/main/res/layout/fragment_subcategories_event.xml
+++ b/app/src/main/res/layout/fragment_subcategories_event.xml
@@ -1,13 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/subcategoriesEventSubcategoryRV"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/twoFragmentHeight"
-        tools:listitem="@layout/item_subcategory">
+        android:layout_height="@dimen/twoFragmentHeight">
 
-    </android.support.v7.widget.RecyclerView>
+        <ImageView
+            android:id="@+id/subcategoriesEventCreateEventIV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/subcategoriesEventSubcategoryRV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/ic_baseline_create_24px" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/subcategoriesEventSubcategoryRV"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/createInCatOrSubcategoryRVHeight"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/item_subcategory"/>
+    </android.support.constraint.ConstraintLayout>
+
+
+
 
 </layout>
